--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<i class="fa fa-bars"></i>
 			<span class="sr-only">Toggle navigation</span>
 			</button>
-			<a href="index.html" class="navbar-brand brand"> SCORILO </a>
+			<a href="index.html" class="navbar-brand brand">3ème éco 4			</a>
 		</div>
 		<div id="navbar-collapse-02" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
@@ -40,11 +40,11 @@
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<div class="text-homeimage">
-					<div class="maintext-image" data-scrollreveal="enter top over 1.5s after 0.1s">
-						 Increase Digital Sales
+					<div  class="maintext-image" data-scrollreveal="enter top over 1.5s after 0.1s">
+						your best biological advertisement company
 					</div>
 					<div class="subtext-image" data-scrollreveal="enter bottom over 1.7s after 0.3s">
-						 Boost revenue with Scorilo
+						If you preserve nature and you want an advertisement you have come to the right address
 					</div>
 				</div>
 			</div>
@@ -61,7 +61,7 @@
 			<div class="col-md-4">
 				<div class="col editContent">
 					<span class="numberstep"><i class="fa fa-shopping-cart"></i></span>
-					<h3 class="numbertext">Choose our Products</h3>
+					<h3 class="numbertext">Choose our Service</h3>
 					<p>
 						 Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Cras justo odio, dapibus ac facilisis in, egestas eget quam.
 					</p>
