--- a/shop.html
+++ b/shop.html
@@ -210,7 +210,7 @@
 							<a href="#" class="learn-more detailslearn"><i class="fa fa-link"></i> Details</a>
 						</p>
 					</div>
-					<span class="maxproduct"><img src="images/product3.png" alt=""></span>
+					<span class="maxproduct"><img src="images/product1-1.jpg" alt=""></span>
 				</div>
 				<div class="product-details">
 					<a href="#">
